--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
             </article>
             <div class="row">
                 <article class="col-md-6">
-                    <img class="mx-auto" src="img/impervious-surface-before.png" width="100%" />
+                    <img class="mx-auto" src="img/impervious-surface-before.PNG" width="100%" />
                 </article>
                 <article class="col-md-6">
-                    <img class="mx-auto" src="img/impervious-surface-after.png" width="100%">
+                    <img class="mx-auto" src="img/impervious-surface-after.PNG" width="100%">
                 </article>
             </div>
             <p style="text-align: center;">Before and After of homeowner's use of pervious surface. Photo Credit: Department of Energy & Environment.</p>
