--- a/tree-report-card-2017.html
+++ b/tree-report-card-2017.html
@@ -227,7 +227,7 @@
                 appendix below.</p>
             </p>
         </article>
-        <a href="https://caseytreesdc.github.io/treereportcard/#tree-coverage">
+        <a href="https://caseytreesdc.github.io/treereportcard#tree-coverage">
             <img class="mx-auto wow bounce" style="width: 50px;" src="img/down-arrow.png">
         </a>
     </section>
