--- a/tree-report-card-2017.html
+++ b/tree-report-card-2017.html
@@ -498,6 +498,22 @@
     <script>
         new WOW().init();
     </script>
+ <!--Pardot Tracking Code-->
+    <script type="text/javascript">
+        piAId = '686253';
+        piCId = '1443';
+        piHostname = 'pi.pardot.com';
+        
+        (function() {
+            function async_load(){
+                var s = document.createElement('script'); s.type = 'text/javascript';
+                s.src = ('https:' == document.location.protocol ? 'https://pi' : 'http://cdn') + '.pardot.com/pd.js';
+                var c = document.getElementsByTagName('script')[0]; c.parentNode.insertBefore(s, c);
+            }
+            if(window.attachEvent) { window.attachEvent('onload', async_load); }
+            else { window.addEventListener('load', async_load, false); }
+        })();
+        </script>
 </body>
 
 </html>
